<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>me.lauriichan.minecraft</groupId>
	<artifactId>pluginbase</artifactId>
	<version>${base.version}-MC${server.version}</version>
	
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.sourceDir>${project.build.directory}/project-sources</project.sourceDir>
		<laylib.version>0.3.0-SNAPSHOT</laylib.version>
		<base.version>1.0.0</base.version>
		<server.version>1.8.8</server.version>
		<java.version>11</java.version>
	</properties>
	
	<profiles>
		<profile>
			<id>release</id>
			<distributionManagement>
				<repository>
					<id>lauriichan</id>
					<name>Lauriichan Maven Repository (Release)</name>
					<url>https://maven.lauriichan.me/release</url>
				</repository>
			</distributionManagement>
		</profile>
	</profiles>
	
	<repositories>
		<repository>
			<id>lauriichan-snapshot</id>
			<name>Lauriichan Maven Repository</name>
			<url>https://maven.lauriichan.me/snapshot</url>
		</repository>
	</repositories>
	
	<dependencies>
		<dependency>
			<groupId>me.lauriichan.laylib</groupId>
			<artifactId>command</artifactId>
			<version>${laylib.version}</version>
		</dependency>
		<dependency>
			<groupId>me.lauriichan.laylib</groupId>
			<artifactId>json</artifactId>
			<version>${laylib.version}</version>
		</dependency>
		
		<dependency>
			<groupId>net.md-5</groupId>
			<artifactId>bungeecord-chat</artifactId>
			<version>1.21-R0.1-SNAPSHOT</version>
		</dependency>

		<dependency>
			<groupId>me.lauriichan.maven</groupId>
			<artifactId>maven-source-modification-plugin</artifactId>
			<version>2.0.0</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>it.unimi.dsi</groupId>
			<artifactId>fastutil</artifactId>
			<version>8.5.9</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.spigotmc</groupId>
			<artifactId>spigot-api</artifactId>
			<version>${server.version}-R0.1-SNAPSHOT</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.spigotmc</groupId>
			<artifactId>spigot</artifactId>
			<version>${server.version}-R0.1-SNAPSHOT</version>
			<scope>provided</scope>
		</dependency>
	</dependencies>
	
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.11.0</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
					<compilerArgs>
						<arg>-parameters</arg>
					</compilerArgs>
					<annotationProcessors>
						<annotationProcessor>
							me.lauriichan.minecraft.pluginbase.extension.processor.ExtensionProcessor</annotationProcessor>
					</annotationProcessors>
				</configuration>
				<executions>
					<execution>
						<id>compile-processors</id>
						<phase>generate-sources</phase>
						<goals>
							<goal>compile</goal>
						</goals>
						<configuration>
							<proc>none</proc>
							<includes>
								<include>**/processor/*Processor.java</include>
								<include>
									me/lauriichan/maven/pluginbase/**/*.java</include>
							</includes>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>me.lauriichan.maven</groupId>
				<artifactId>maven-source-modification-plugin</artifactId>
				<version>2.0.0</version>
				<executions>
					<execution>
						<id>default-modifySources</id>
						<phase>generate-sources</phase>
						<goals>
							<goal>modifySource</goal>
						</goals>
						<configuration>
							<transformers>
								<transformer>
									<className>
										me.lauriichan.maven.pluginbase.transformer.ConfigSourceTransformer</className>
								</transformer>
							</transformers>
							<includes>
								<include>**/*Template.java</include>
							</includes>
							<replacements>
								<replacement>
									<regex>true</regex>
									<pattern>(?:.*)(Template)(?:\.java)</pattern>
									<replace></replace>
								</replacement>
							</replacements>
							<copyUnmodifiedFiles>false</copyUnmodifiedFiles>
							<outputDirectory>${project.sourceDir}</outputDirectory>
						</configuration>
					</execution>
					<execution>
						<id>default-deleteSources</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>deleteSources</goal>
						</goals>
						<configuration>
							<includes>
								<include>
									me/lauriichan/minecraft/pluginbase/**/*Template.class</include>
							</includes>
							<purgeEmptyPackages>true</purgeEmptyPackages>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>build-helper-maven-plugin</artifactId>
				<version>3.4.0</version>
				<executions>
					<execution>
						<id>add-modified-source</id>
						<goals>
							<goal>add-source</goal>
						</goals>
						<configuration>
							<sources>
								<source>${project.sourceDir}</source>
							</sources>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>
	</build>
</project>